@@ -1,7 +1,11 @@
 package com.canopy.numbers.served.application.views.reports;
 
 import java.io.ByteArrayOutputStream;
+import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
@@ -11,8 +15,9 @@ import org.springframework.stereotype.Component;
 import com.canopy.numbers.served.application.data.CaresForm;
 import com.canopy.numbers.served.application.data.CaresFormLocation;
 import com.canopy.numbers.served.application.data.CaresFormReason;
-import com.canopy.numbers.served.application.service.LocationService;
-import com.canopy.numbers.served.application.service.ReasonService;
+import com.canopy.numbers.served.application.service.CaresFormLocationService;
+import com.canopy.numbers.served.application.service.CaresFormReasonService;
+import com.canopy.numbers.served.application.service.CaresFormService;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.combobox.ComboBox;
 import com.vaadin.flow.component.datepicker.DatePicker;
@@ -21,18 +26,25 @@ import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.component.notification.Notification;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 
+import software.xdev.vaadin.grid_exporter.GridExporter;
+
 @Component
 public class CaresReportLayout extends DownloadGridView<CaresForm> {
 
 	private static final long serialVersionUID = -1114611788890403198L;
 
 	@Autowired
-	private LocationService locationService;
+	private CaresFormLocationService locationService;
 
 	@Autowired
-	private ReasonService reasonService;
+	private CaresFormReasonService reasonService;
+
+	@Autowired
+	private CaresFormService caresFormService; // Injecting the CaresFormService
 
 	private Grid<CaresForm> caresGrid;
+
+	private List<CaresForm> currentItems; // To store the currently displayed items
 
 	public Div createLayout() {
 		Div layout = new Div();
@@ -44,7 +56,7 @@ public class CaresReportLayout extends DownloadGridView<CaresForm> {
 
 		ComboBox<String> locationFilter = new ComboBox<>("Location");
 		List<CaresFormLocation> locations = locationService.getAllLocations();
-		List<String> locationNames = locations.stream().map(CaresFormLocation::getName).toList();
+		List<String> locationNames = locations.stream().map(CaresFormLocation::getName).collect(Collectors.toList());
 		locationFilter.setItems(locationNames);
 		locationFilter.setPlaceholder("Select Location");
 
@@ -56,12 +68,42 @@ public class CaresReportLayout extends DownloadGridView<CaresForm> {
 		DatePicker startDate = new DatePicker("Start Date");
 		DatePicker endDate = new DatePicker("End Date");
 
-		Button applyFiltersButton = new Button("Apply Filters");
+		Button applyFiltersButton = new Button("Apply Filters", event -> {
+			// Retrieve selected filter values
+			String selectedLocation = locationFilter.getValue();
+			CaresFormReason selectedReason = reasonFilter.getValue();
+			LocalDate start = startDate.getValue();
+			LocalDate end = endDate.getValue();
+
+			// Fetch all forms and apply filters
+			currentItems = caresFormService.findAll().stream()
+					.filter(form -> (selectedLocation == null
+							|| (form.getLocation() != null && selectedLocation.equals(form.getLocation().getName()))))
+					.filter(form -> (selectedReason == null
+							|| (form.getReasonForVisit() != null && selectedReason.equals(form.getReasonForVisit()))))
+					.filter(form -> (start == null || (form.getDateTimeOfVisit() != null
+							&& !form.getDateTimeOfVisit().toLocalDate().isBefore(start))))
+					.filter(form -> (end == null || (form.getDateTimeOfVisit() != null
+							&& !form.getDateTimeOfVisit().toLocalDate().isAfter(end))))
+					.collect(Collectors.toList());
+
+			// Update grid with filtered data
+			caresGrid.setItems(currentItems);
+
+			// Show notification if no data matches the filters
+			if (currentItems.isEmpty()) {
+				Notification.show("No matching results found.", 3000, Notification.Position.MIDDLE);
+			}
+		});
+
 		Button clearFiltersButton = new Button("Clear Filters", e -> {
 			locationFilter.clear();
 			reasonFilter.clear();
 			startDate.clear();
 			endDate.clear();
+			// Reset grid to show all items
+			currentItems = caresFormService.findAll();
+			caresGrid.setItems(currentItems);
 		});
 
 		filtersLayout.add(locationFilter, reasonFilter, startDate, endDate, applyFiltersButton, clearFiltersButton);
@@ -71,26 +113,19 @@ public class CaresReportLayout extends DownloadGridView<CaresForm> {
 		caresGrid.setSizeFull();
 		caresGrid.setColumns("visitorName", "associatedStudent", "dateTimeOfVisit", "location", "reasonForVisit");
 
-		// Download Button
-		Button downloadButton = new Button("Download Excel");
-		downloadButton.addClickListener(e -> {
-			CaresForm selectedItem = caresGrid.asSingleSelect().getValue();
-			if (selectedItem != null) {
-				callDownloadService(selectedItem);
-			} else {
-				Notification.show("Please select an item to download.", 3000, Notification.Position.MIDDLE);
-			}
-		});
+		// Fetch data from the service and set it to the grid
+		currentItems = caresFormService.findAll();
+		caresGrid.setItems(currentItems);
 
-		// Add components to layout
-		filtersLayout.add(downloadButton);
+		// Export Button
+		Button exportButton = new Button("Export Data", event -> GridExporter.newWithDefaults(this.caresGrid).open());
+		filtersLayout.add(exportButton);
 		layout.add(filtersLayout, caresGrid);
 		layout.getStyle().set("background-color", "#f9f9f9");
 
 		return layout;
 	}
 
-	@Override
 	protected byte[] generateExcel(CaresForm item) {
 		try (Workbook workbook = new XSSFWorkbook(); ByteArrayOutputStream out = new ByteArrayOutputStream()) {
 			var sheet = workbook.createSheet("Report");
@@ -103,7 +138,8 @@ public class CaresReportLayout extends DownloadGridView<CaresForm> {
 
 			var dataRow = sheet.createRow(1);
 			dataRow.createCell(0).setCellValue(item.getVisitorName());
-			dataRow.createCell(1).setCellValue(item.getAssociatedStudent());
+			dataRow.createCell(1).setCellValue(
+					(item.getAssociatedStudent().getLastName() + ", " + item.getAssociatedStudent().getFirstName()));
 			dataRow.createCell(2).setCellValue(item.getDateTimeOfVisit().toString());
 			dataRow.createCell(3).setCellValue(item.getLocation().toString());
 			dataRow.createCell(4).setCellValue(item.getReasonForVisit().toString());
@@ -119,5 +155,11 @@ public class CaresReportLayout extends DownloadGridView<CaresForm> {
 	@Override
 	protected String getItemId(CaresForm item) {
 		return item.getId().toString();
+	}
+
+	@Override
+	protected byte[] generateExcel(List<CaresForm> items) {
+		// TODO Auto-generated method stub
+		return null;
 	}
 }
